# os.rv

./: .gitignore  tagged_binary_template.bt
bootloader/: Cargo.toml  compile.sh  deps.md
bootloader/src/: main.rs  peripheral_fs.rs
eeprom/: boot.S  compile.sh  elf.h  link.ld  main  main.cpp  riscv64-virt.ld
kernel/: Cargo.toml  build.rs  compile.sh  deps.md  link_kernel.x  memory.x  riscv32gc-unknown-none-elf.json
kernel/.cargo/: config
kernel/src/: main.rs  mmu.rs  mode_change.S  page_tables.rs
kernel/src/drivers/: component_fifo.rs  gpu_driver.rs  mod.rs
kernel/src/mmu/: mod.rs  page_allocator.rs  page_tables.rs
kernel/src/peripherals/: basic_fifo.rs  memory_size.rs  mod.rs  stream.rs  taggedbinary.rs
