[package]
name = "kernel"
version = "0.1.0"
authors = ["Pwootage <pwootage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6.0"
riscv-rt = "0.8.0"
goblin = {version = "0.2.3", default-features = false, features = ["elf32"]}
volatile-register = "0.2.0"
bitvec = {version = "0.17.4", default-features = false }
bitfield = "0.13.2"
spin = "0.5.2"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"